# dataset-builder

./: .gitignore  404.html  README.md  dataset.toml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_data_objects_table.csv  test_data_objects_table.xlsx
attributes/: index.html
dataset_structure/: index.html
docs/: .pages  attributes.md  index.md  usage.md
example/: index.html
images/: nodes.pptx
search/: search_index.json
src/dataset-builder/: __main__.py  build_dataset.py  dataset.py  validator.py
src/dataset_builder/: __init__.py  __main__.py  dataset.py
usage/: index.html
