
[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "dataset-builder"
version = '0.1.0'
description = 'Create a dataset from a given TOML file.'
authors = [{name = "Mitchell Tillman", email ="mtillman14@gmail.com"}]
dependencies = [
    "toml",
    "networkx",
]

[project.scripts]
dataset-builder = 'dataset_builder.__main__:main'